# XMail

./: .hgignore  CMakeLists.txt  README.md  StrUtils.cpp
